# sensor-system

./: .gitignore  README.md  hostctl  sgit
hardware/: README.md  design-notes.md  jlcpcb-parts.md  kicad-git-workflow.md  parts.md  progress.md
hardware/KiCad - node V2/: README.md  RP2350.kicad_pcb  RP2350.kicad_pro  RP2350.kicad_sch  _autosave-RP2350.kicad_sch  symbols.bak  symbols.kicad_sym
hardware/KiCad - node V2/footprints.pretty/: ADXL355BEZ-RL7.kicad_mod  CONN-SMD_BM05B-GHS-TBT.kicad_mod  CONN-TH_10P-P2.50_B10B-XH-A-LF-SN.kicad_mod  CONN-TH_B5B-XH-A-LF-SN.kicad_mod  CONN-TH_B8B-XH-A-LF-SN.kicad_mod  FXL0420-100-MIND-SMD_L4.4-W4.2.kicad_mod  IND-SMD_L2.0-W1.6_AOTA-B201610S3R3-101-T.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  THVD1450DR-SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL.kicad_mod  TLV75733PDBVR-SOT-23-5_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  TPS2121RUXR-VQFN-HR-12_L2.5-W2.0-P0.50-BL.kicad_mod  TPS62175DQCR_WSON-10_L3.0-W2.0-P0.50-BL-EP.kicad_mod  TPS7A2033PDBVR.kicad_mod  USB-C-SMD_GT-USB-7051A.kicad_mod  USBLC6-2SC6.kicad_mod  Untitled.kicad_mod  Untitled_1.kicad_mod  WSON-8_L6.0-W5.0-P1.27-BL-EP.kicad_mod
hardware/KiCad - node V2/my_footprints.old.pretty/: C_1206_3216Metric.kicad_mod  D_SMA.kicad_mod  D_SMB.kicad_mod  E-14-1_ADI-M.kicad_mod  E-14-1_ADI.kicad_mod  LED_0603_1608Metric.kicad_mod  RUX0012A.kicad_mod  R_0201_0603Metric.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOIC-8_5.3x5.3mm_P1.27mm.kicad_mod  SOT-23.kicad_mod  USB_C_Receptacle_G-Switch_GT-USB-7051x.kicad_mod  Untitled.kicad_mod  WSON-10-1EP_2x3mm_P0.5mm_EP0.84x2.4mm_ThermalVias.kicad_mod
hardware/KiCad - node V2/my_footprints.pretty/: C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  E-14-1_ADI-L.kicad_mod  Fuse_1812_4532Metric.kicad_mod  L_0805_2012Metric.kicad_mod  PinHeader_1x02_P2.54mm_Vertical.kicad_mod  Pin_D0.7mm_L6.5mm_W1.8mm_FlatFork.kicad_mod  QFN-60-1EP_7x7mm_P0.4mm_EP3.4x3.4mm.kicad_mod  R_0402_1005Metric.kicad_mod  R_0603_1608Metric.kicad_mod  R_0805_2012Metric.kicad_mod  SOT-23-5.kicad_mod  SOT-23-6.kicad_mod  SW_PUSH_6mm.kicad_mod  TerminalBlock_RND_205-00278_1x04_P5.00mm_Vertical.kicad_mod
hardware/KiCad - node V2/nodeV3-test/: RP2350-B_Mask.gbr  RP2350-B_Paste.gbr  RP2350-B_Silkscreen.gbr  RP2350-Edge_Cuts.gbr  RP2350-F_Mask.gbr  RP2350-F_Paste.gbr  RP2350-F_Silkscreen.gbr  RP2350-L1 Signals - Top.gbr  RP2350-L2 GND Plane.gbr  RP2350-L3 Power.gbr  RP2350-L4 Signals - Back.gbr  RP2350-job.gbrjob
host/: README-deploy.md  README-product.md  README-recorder.md  __init__.py  host_bootloader.py  host_config.json  host_configurator.py  host_console.py  host_dashboard.py  host_lab.py  host_operator_panel.py  host_ping.py  host_recorder.py  host_supervisor.py  live_web.py  requirements-recorder.txt  system_config.json
host/common/: __init__.py  protocol.py  runtime_status.py  system_config.py
host/configs/: host_system.example.json
host/console/: app.py
host/dashboard/: __init__.py  app.py
host/operator_panel/: app.py
host/recorder/: __init__.py  app.py
host/systemd/: sensor-system-operator-panel.service  sensor-system-operator-panel.service.example  sensor-system-recorder.service.example  sensor-system-supervisor.service  sensor-system-supervisor.service.example
host/tests/: __init__.py  test_host_bootloader.py  test_host_configurator.py  test_host_dashboard.py  test_host_operator_panel.py  test_host_recorder.py
host/tools/: __init__.py  bootloader_cli.py
host/udev/: 99-sensor-system-rs485.rules.example
node/: .gitignore  CMakeLists.txt  README-bootloader.md  main.cpp
node/acquisition/: acquisition_engine.cpp  acquisition_engine.h
node/adxl355/: adxl355_driver.cpp  adxl355_driver.h  adxl355_registers.h
node/boot/: boot_config.h  boot_decision.cpp  boot_decision.h  boot_flash.cpp  boot_flash.h  boot_jump.cpp  boot_jump.h  boot_main.cpp  boot_maintenance.cpp  boot_maintenance.h  boot_metadata.cpp  boot_metadata.h  boot_update_engine.cpp  boot_update_engine.h  boot_update_protocol.cpp  boot_update_protocol.h  boot_update_server.cpp  boot_update_server.h
node/boot_shared/: boot_runtime_api.cpp  boot_runtime_api.h  boot_shared_metadata_io.cpp  boot_shared_metadata_io.h
node/cmake/: pico_flash_region.template.ld
node/common/: device_config.h  device_identity.cpp  device_identity.h  node_types.h  protocol_ids.h  sensor_types.h
node/config/: config_crc.cpp  config_crc.h  config_manager.cpp  config_manager.h  config_store.h  config_store_flash.cpp  config_store_flash.h  config_store_stub.cpp  config_store_stub.h  persistent_config.h
node/controller/: node_controller.cpp  node_controller.h
node/interfaces/: i_accelerometer.h  i_data_plane.h  i_sample_sink.h  i_temperature_sensor.h
node/processing/: decimating_filter.h
node/runtime/: core0_acquisition_loop.h  core1_transport_loop.h
node/storage/: acquisition_buffer.h  stored_sample.h
node/system/: runtime_context.h
node/tests/: boot_update_protocol_test.cpp  data_plane_test.cpp  decimating_filter_test.cpp  packet_queue_test.cpp  run_host_tests.sh
node/tests/stubs/pico/: critical_section.h
node/tools/: build_boot_artifacts.py  package_node_release.py
node/transport/: command_payloads.h  command_types.h  crc16.cpp  crc16.h  data_plane.h  frame_decoder.cpp  frame_decoder.h  frame_encoder.cpp  frame_encoder.h  frame_layout.h  frame_types.h  packet_queue.h  rs485_port.cpp  rs485_port.h  status_codes.h  transport.h
